--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,28 @@ jobs:
   build:
     docker:
       - image: circleci/node:10
+    branches:
+      only:
+        - master
     steps:
-     - run:
-          name: show version
-          command: node -v
-     - run:
-        name: HelloWorld from circleci
-        command: echo 'hello world'
+      - checkout
+      - restore_cache:
+          keys:
+            # fallback to using the latest cache if no exact match is found
+            - dependencies-
+      - run:
+          name: Install
+          command: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: dependencies-
+      - run:
+          name: build github pages
+          command: yarn build
+      - run:
+          name: Prepare shell commands
+          command: chmod +x scripts/deploy.sh
+      - run:
+          name: Run deploy scripts
+          command: ./scripts/deploy.sh
