--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
       only:
         - master
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "ea:ae:94:da:df:9f:5f:9d:86:ca:dc:97:40:78:ee:2a"
       - checkout
       - restore_cache:
           keys:
