--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,14 @@ jobs:
             - dependencies-
       - run:
           name: Install
-          command: yarn install
+          command: npm i
       - save_cache:
           paths:
             - node_modules
           key: dependencies-
       - run:
           name: build github pages
-          command: yarn build
+          command: npm run build
       - run:
           name: Prepare shell commands
           command: chmod +x scripts/deploy.sh
