--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
           name: Prepare shell commands
           command: chmod +x scripts/deploy.sh
       - run:
+          name: setup known hosts1
+          command: echo $ipAddress
+      - run:
           name: setup known hosts
           command: ssh-keyscan $ipAddress >> ~/.ssh/known_hosts
       - run:
